Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: N/A
-
Fix Version/s: 10.2.4
-
Component/s: Configuration
-
Labels:
Description
With the new options from MDEV-7635 (bb-10.2-mdev7635.final a3a91332d006f), server produces a warning upon startup:
2017-01-25 2:50:31 139873221842816 [Warning] options --log-slow-admin-statements, --log-queries-not-using-indexes and --log-slow-slave-statements have no effect if --log_slow_queries is not set
|
It seems strange to have a default configuration which causes warnings. If we want to have these options enabled and keep log_slow_queries disabled, the solution would be not to issue the warning, or at least write it as a note.
Attachments
Issue Links
- relates to
-
MDEV-7635 update defaults and simplify mysqld config parameters
-
- Closed
-
- links to