MDEV-11908: New default configuration produces warnings about itself upon startup

Print the message as a note instead of warning.